# declarative-dataflow

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  server_dataflow.rs
cli/: Cargo.toml
cli/examples/: changes.json  changes2.json  changes3.json  schema.json
cli/src/: cli.yml  main.rs
docs/adr/: 0001-server-architecture.md  0002-data-model.md  0003-naming.md
examples/: graphql_derive.rs
experiments/: Cargo.toml
resources/public/: index.html
server/: Cargo.toml
server/examples/: default.json  tick.json
server/src/: main.rs  networking.rs
server/tests/: serialization.rs
src/: lib.rs  logging.rs
src/binding/: mod.rs
src/derive/: graphql.rs  mod.rs
src/domain/: mod.rs  unordered_session.rs
src/operators/: last_write_wins.rs  mod.rs
src/plan/: aggregate.rs  aggregate_monoid.rs  aggregate_neu.rs  antijoin.rs  filter.rs  function.rs  graphql.rs  graphql_v2.rs  hector.rs  join.rs  mod.rs  predicate.rs  project.rs  pull.rs  pull_level.rs  pull_v2.rs  transform.rs  union.rs
src/scheduling/: frontier_scheduler.rs  mod.rs  realtime_scheduler.rs
src/server/: mod.rs  scheduler.rs
src/server_impl/: handler.rs  mod.rs  output.rs
src/sinks/: assoc_in.rs  csv_file.rs  mod.rs
src/sources/: csv_file.rs  declarative_logging.rs  differential_logging.rs  json_file.rs  mod.rs  plain_file.rs  timely_logging.rs
src/timestamp/: altneu.rs  mod.rs  pair.rs
static/: index.html
static/js/: diff_hook.js
tests/: aggregation_test.rs  cardinality_one.rs  domain_test.rs  hector_test.rs  input_semantics.rs  or_test.rs  pull_test.rs  query_test.rs  registration_test.rs  scheduling_test.rs  transform_test.rs
