[package]
name = "declarative_dataflow"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>", "Nikolas Göbel <me@nikolasgoebel.com>"]
edition = "2018"

[dependencies]
jemallocator = "0.1.8"
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow", features = ["bincode"] }
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow" }
abomonation = "0.7"
abomonation_derive = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
mio = "0.6.16"
slab = "0.4.1"
# ws = { path = "../ws-rs/" }
ws = { git = "https://github.com/comnik/ws-rs" }
log = "0.4"
env_logger = "0.5.6"
getopts = "0.2.18"
num-rational = { version = "0.2", features = ["std", "serde"] }
timely_sort = "0.1.6"
csv = { version = "1", optional = true }

[features]
set-semantics = []
uuids = []
csv-source = ["csv"]

[[bin]]
name = "server"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
rpath = false
lto = false
codegen-units = 4
