[package]

name = "declarative-dataflow"
version = "0.1.0"
authors = ["Nikolas Göbel <me@nikolasgoebel.com>", "Frank McSherry <fmcsherry@me.com>"]
edition = "2018"

description = "A reactive query engine built on Differential Dataflow."

documentation = "https://docs.rs/declarative-dataflow"
homepage = "https://github.com/comnik/declarative-dataflow"
repository = "https://github.com/comnik/declarative-dataflow.git"
keywords = ["differential", "dataflow",  "datalog", "graphql", "query"]
license = "MIT"

[dependencies]
jemallocator = "0.1.8"
# timely = { version = "0.9.0", features = ["bincode"] }
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow", features = ["bincode"] }
# differential-dataflow = { version = "0.9.0" }
differential-dataflow = { git = "https://github.com/ClockworksIO/differential-dataflow" }
serde = "1"
serde_derive = "1"
log = "0.4"
env_logger = "0.5.6"
num-rational = { version = "0.2", features = ["std", "serde"] }
timely_sort = "0.1.6"

serde_json = { version = "1", optional = true }
csv = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
uuid = { version = "0.7", features = ["serde"], optional = true }
graphql-parser = { version = "0.2.2", optional = true }
fixed = { version = "0.3.2", optional = true, features = ["serde"] }

[features]
real-time = []
set-semantics = []
csv-source = ["csv", "chrono"]
json-source = ["serde_json", "chrono"]
graphql = ["graphql-parser", "serde_json"]
real = ["fixed"]

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
rpath = false
lto = false
codegen-units = 4
