[package]

name = "3dfctl"
version = "0.1.0"
authors = ["Nikolas Göbel <me@nikolasgoebel.com>"]
edition = "2018"

[dependencies]
declarative-dataflow = { path = "../" }
serde = "1"
serde_json = "1"
rmp-serde = "0.13.7"
log = "0.4"
env_logger = "0.5.6"
clap = { version = "~2.33.0", features = ["yaml"] }
ws = "*"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
rpath = false
lto = false
codegen-units = 4
