[package]

name = "3dfctl"
version = "0.2.0"
authors = ["Nikolas Göbel <me@nikolasgoebel.com>"]
edition = "2018"

[dependencies]
declarative-dataflow = { version = "0.2.0", features = ["graphql"] }
serde = "1"
serde_json = "1"
log = "0.4"
env_logger = "0.5.6"
clap = { version = "~2.33.0", features = ["yaml"] }
ws = "0.8.0"
uuid = { version = "0.7", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
rpath = false
lto = false
codegen-units = 4
