[package]
name = "declarative_dataflow_experiments"
version = "0.1.0"
authors = ["Nikolas Göbel <me@nikolasgoebel.com>"]
edition = "2018"

[dependencies]
jemallocator = "0.1.8"
timely = { version = "0.9.0", features = ["bincode"] }
differential-dataflow = { version = "0.9.0" }
graph_map = "0.1"

[dependencies.declarative-dataflow]
path = ".."
features = ["csv-source", "real-time"]