[package]
name = "declarative_dataflow_experiments"
version = "0.1.0"
authors = ["Nikolas Göbel <me@nikolasgoebel.com>"]
edition = "2018"

[dependencies]
jemallocator = "0.1.8"
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow", features = ["bincode"] }
differential-dataflow = { git = "https://github.com/ClockworksIO/differential-dataflow" }
graph_map = "0.1"

[dependencies.declarative-dataflow]
path = ".."
features = ["csv-source", "real-time"]